# salary-predictor

./: .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  PRD.md  README.md  deployed-urls.txt  notes.txt  pyproject.toml  railway.toml
api/: main.py  models.py  predictor.py
api/routers/: analyze.py  predict.py
demo_samples/: new_records-2.csv  new_records-5.csv  new_records-50.csv
models/: random_forest_model.joblib
notebooks/: 01_Exploratory_Data_Analysis.ipynb  02_Data_Cleaning_and_Feature_Engineering.ipynb  02_Data_Cleaning_and_Feature_Engineering_v2.ipynb  03_Model_Training_RF.ipynb  03_Model_Training_RF_v2.ipynb
scripts/: run_pipeline.py
src/: __init__.py  ollama_client.py  preprocessing.py  supabase_client.py  train.py
src/api/: __init__.py  main.py  schemas.py
src/dashboard/: app.py
src/generation/: __init__.py  generate.py  llm.py
streamlit_app/: dashboard.py  upload_ui.py
tests/: __init__.py
